# Goptivum

./: .env.example  .gitignore  LICENSE  README.md  config.json  go.mod  go.sum  main.go
api/v1/: api.go
api/v1/errors/: response.go  types.go
api/v1/handlers/: auth_login.go  auth_refresh.go  me.go
api/v1/middleware/: auth.go  middleware.go
api/v1/routes/: auth.go  routes.go
api/v1/types/: types.go
api/v1/validation/: validation.go
app/: config.json
backend/services/solver/: justfile
backend/services/solver/backend/: go.mod  go.sum  main.go
backend/services/solver/backend/api/: api_test.go  handlers.go  routes.go  simple.go  sse.go
backend/services/solver/backend/cmd/rawexport/: main.go
backend/services/solver/backend/config/: config.go
backend/services/solver/backend/jobs/: registry.go  registry_test.go  runner.go
backend/services/solver/backend/optivum/: model.go  parser.go  parser_test.go  writer.go  writer_test.go
backend/services/solver/backend/simple/: render.go  simple.go  simple_test.go
backend/services/solver/frontend/: nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
backend/services/solver/frontend/app/: app.vue
backend/services/solver/frontend/app/composables/: useArrangoApi.ts  useIssues.ts  useSchoolLookup.ts  useSolveJob.ts  useSolverConfig.ts  useWorkspace.ts
backend/services/solver/frontend/app/layouts/: default.vue
backend/services/solver/frontend/app/pages/: conflicts.vue  data.vue  index.vue  schedule.vue  scores.vue
backend/services/solver/frontend/app/plugins/: vuetify.ts
backend/services/solver/frontend/app/theme/: defaults.ts  themes.ts
backend/services/solver/frontend/app/types/: arrango.ts
backend/services/solver/frontend/app/utils/: entityFields.ts  entityOps.test.ts  entityOps.ts  model.test.ts  model.ts  roomRules.test.ts  roomRules.ts  (+2 more)
backend/services/solver/solver/: CMakeLists.txt
backend/services/solver/solver/cmake/: ArrangoProto.cmake
backend/services/solver/solver/docs/: api.md
backend/services/solver/solver/src/demo/: demo_data.cc  demo_data.h  demo_internal.h  demo_production.cc
backend/services/solver/solver/src/model/: atoms.cc  atoms.h  daily_load.cc  daily_load.h  eligibility.cc  eligibility.h  ids.h  index.cc  index.h  locus.h  model.h  streams.cc  streams.h  structure.cc  structure.h
backend/services/solver/solver/src/score/: metrics.cc  metrics.h  penalty_defs.h  rules.cc  rules.h  scorer.cc  scorer.h  scorer_aggregate.cc  scorer_info.cc  scorer_internal.h  scorer_students.cc  scorer_teachers.cc  verdict.cc  verdict.h
backend/services/solver/solver/src/service/: convert.h  convert_common.cc  convert_common.h  convert_config.cc  convert_model.cc  convert_model_to.cc  convert_report.cc  main.cc  service.cc  service.h
backend/services/solver/solver/src/solve/: candidates.cc  candidates.h  constraints.cc  constraints.h  cpsat_runner.cc  cpsat_runner.h  explain.cc  explain.h  lns.cc  lns.h  objective.cc  objective.h  objective_encode.cc  objective_internal.h  objective_students.cc  objective_teachers.cc  solver.cc  solver.h  trace.cc  trace.h
backend/services/solver/solver/src/validate/: conflict.h  preflight.cc  preflight.h  validator.cc  validator.h  validator_dailyload.cc  validator_internal.h  validator_occupancy.cc  validator_references.cc  validator_rooms.cc
backend/services/solver/solver/tests/: candidates_test.cc  capabilities_test.cc  daily_load_test.cc  demo_data_test.cc  explain_test.cc  lns_test.cc  metrics_test.cc  model_index_test.cc  preflight_test.cc  proto_smoke_test.cc  rules_test.cc  scorer_test.cc  service_test.cc  solver_hard_test.cc  solver_soft_test.cc  streams_test.cc  structure_test.cc  test_school.h  validator_test.cc  verdict_test.cc
backend/services/solver/solver/tools/: bench.cc
common/config/: config.go  defaults.go  models.go  validation.go
common/logger/: logger.go
core/auth/: auth.go  jwt.go
core/datastore/: datastore.go  seeding.go
core/models/: account.go  classroom.go  division.go  lesson.go  models.go  schedule.go  school.go  teacher.go
core/parser/: parser.go
core/parser/classroom/: classroom.go
core/parser/common/: common.go
core/parser/division/: division.go
core/parser/schedule/: schedule.go
core/parser/school/: school.go
core/parser/teacher/: teacher.go
core/parser/validation/: school.go  uniqueness.go  validation.go
core/repositories/: account.go
docs/: docs.go  swagger.json  swagger.yaml
scripts/: swagger.sh
tests/parser/: classroom_test.go  common_test.go  division_test.go  school_test.go  teacher_test.go  uniqueness_test.go
(+22 files in other folders)
